# tangent

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: solidity.yml
docs/adr/: 0001-batched-end-of-block-settlement.md  0003-usdcvault-design.md
docs/deploy/: circle-scp-runbook.md
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/scripts/: check-light.ps1
rust/tangent-sdk/: Cargo.toml
rust/tangent-sdk/examples/: construct_order.rs  keeper_polling.rs  load_manifest.rs  rpc_executor.rs
rust/tangent-sdk/src/: abi.rs  account.rs  client.rs  collateral.rs  context.rs  contracts.rs  domain.rs  eip712.rs  events.rs  keeper.rs  lib.rs  lifecycle.rs  liquidation.rs  manifest.rs  market.rs  order.rs  orderbook.rs  placement.rs  projection.rs  rpc.rs  settlement.rs  signing.rs  tx.rs
script/: Deploy.s.sol
src/: LiquidationKeeper.sol  MarketRegistry.sol  OrderBook.sol  SettlementEngine.sol  USDCVault.sol
src/interfaces/: IMarketRegistry.sol  IOrderBook.sol  IPriceFeed.sol  ISettlement.sol
src/types/: OrderTypes.sol
test/: AccountManager.t.sol  LiquidationKeeper.t.sol  MarketRegistry.t.sol  MockPriceFeed.sol  OrderBook.t.sol  OrderTypes.t.sol  SettlementEngine.t.sol  USDCVault.t.sol
test/integration/: DepositWithdrawRoundtrip.t.sol
