[workspace]
resolver = "2"
members = [
    "tangent-sdk",
    # Future v0.8+ members:
    # "tangent-keeper",
    # "tangent-indexer",
    # "tangent-matcher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Jagrit Gumber <jagrit@wearemomentus.com>"]
repository = "https://github.com/JagritGumber/tangent"
description = "Tangent: forkable perpetual-futures DEX reference for Arc Testnet. Off-chain Rust crates that consume the on-chain Solidity primitives in ../src."

[workspace.dependencies]
# Pinned at workspace level so all member crates resolve to the same versions.
# Concrete versions are intentionally NOT set yet for crates that have not been
# pulled in - we wire them when the consuming crate lands. The SDK uses
# alloy-primitives for typed-data hashing now; full Alloy RPC, tokio, and
# tracing remain deferred until the client/keeper crates land.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
alloy-primitives = { version = "1.6.0", default-features = false, features = ["std", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
