[package]
name = "tangent-sdk"
description = "Transport-agnostic Rust SDK for Tangent: EIP-712 orders, signed calldata, workflow plans, manifests, and ABI helpers for Arc."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

# v0.8 will add: full Alloy RPC, alloy-signer-local, alloy-sol-types,
# tokio, tracing. Keeping deps minimal here: alloy-primitives is only used
# for Address/B256/keccak typed-data helpers; full RPC client + signing
# backends land alongside the keeper binary.

[features]
default = []
# Future feature flags:
# circle-dev-wallets = []  # entity-secret signer via Circle's developer platform
# aws-kms            = []  # AWS KMS signer for institutional flows

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
# Pedantic intentionally NOT enabled at v0.1 - it's noisy on stub code
# and we tighten as the SDK grows. The `clippy::all` gate still catches
# correctness + suspicious patterns.
